5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1756_1576.log
== TEST (2019-05-23 14:33:16) 
-- CODE:
from numpy import *
v = array[("v:")]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:53:35) 
-- CODE:
from numpy import *
Eusapia = array(eval(input("vetores: ")))
Barsanulfo = array(eval(input("")))
i = 0
cont = 0
while (i <= Eusapia and i <= Barsanulfo):







-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:54:52) 
-- CODE:
from numpy import *
Eusapia = array(eval(input("vetores: ")))
Barsanulfo = array(eval(input("vetores: ")))
i = 0
cont = 0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:57:15) 
-- CODE:
from numpy import *
Eusapia = array(eval(input("vetores: ")))
Barsanulfo = array(eval(input("vetores: ")))
i = 0
cont = 0
while(i <= Eusapia and i <= Barsanulfo)
	if (Eusapia > Barsanulfo)

-- ERROR:
File "XXXX", line 6
    while(i <= Eusapia and i <= Barsanulfo)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:58:03) 
-- CODE:
from numpy import *
Eusapia = array(eval(input("vetores: ")))
Barsanulfo = array(eval(input("vetores: ")))
i = 0
cont = 0
while(i >= Eusapia)
	if (Eusapia > Barsanulfo)

-- ERROR:
File "XXXX", line 6
    while(i >= Eusapia)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:59:04) 
-- CODE:
from numpy import *
Eusapia = array(eval(input("vetores: ")))
Barsanulfo = array(eval(input("vetores: ")))
i = 0
cont = 0
while(i >= size(Eusapia):
	if (Eusapia > Barsanulfo)

-- ERROR:
File "XXXX", line 6
    while(i >= size(Eusapia):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:59:12) 
-- CODE:
from numpy import *
Eusapia = array(eval(input("vetores: ")))
Barsanulfo = array(eval(input("vetores: ")))
i = 0
cont = 0
while(i >= size(Eusapia)):
	if (Eusapia > Barsanulfo)

-- ERROR:
File "XXXX", line 7
    if (Eusapia > Barsanulfo)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:03:48) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 == v2)
	

-- ERROR:
File "XXXX", line 6
    while (v1 == v2)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:04:04) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 == v2):
	

-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:04:11) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 == v2):
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:04:16) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 == v2):
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:04:37) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 == v2):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:05:42) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 == v2):
	if (v1 > v2)
	mensagem = ("EUSAPIA")
	
-- ERROR:
File "XXXX", line 7
    if (v1 > v2)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:08:22) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 == v2):
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	else(V1 == v2):
		print("EMPATE")
		
	
-- ERROR:
File "XXXX", line 11
    else(V1 == v2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:08:46) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 != v2):
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	else(V1 == v2):
		print("EMPATE")
		
	
-- ERROR:
File "XXXX", line 11
    else(V1 == v2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:09:39) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 != v2):
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:10:19) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 != v2):
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
		
	
-- EXECUTION TIME:
0.488305
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 6, in <module>
    while (v1 != v2):
NameError: name 'v1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:13:01) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 != v2):
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print("quantidade de jogadas")		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:13:52) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
while (v1 != v2):
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print("quantidade de jogadas")		
	
-- EXECUTION TIME:
0.495148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 6, in <module>
    while (v1 != v2):
NameError: name 'v1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:17:27) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 != v2):
	i = i + 1
	cont = cont + V1[i] * v2
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:18:39) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 != v2):
	i = i + v1[i] * v2[i]
	cont = cont + V1[i] * v2
	cont = cont +
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")

	
-- ERROR:
File "XXXX", line 10
    cont = cont +
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:19:12) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 != v2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:19:32) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 != v2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")

	
-- EXECUTION TIME:
0.593079
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 7, in <module>
    while (v1 != v2):
NameError: name 'v1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:19:49) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 != v2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:20:32) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 == v2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:20:46) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 == v2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")

	
-- EXECUTION TIME:
0.429042
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 7, in <module>
    while (v1 == v2):
NameError: name 'v1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:20:49) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 == v2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:23:18) 
-- CODE:
from numpy import *
V1 = array(eval(input("vetores: ")))
V2 = array(eval(input("vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 != v2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:24:37) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (v1 != v2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:25:09) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:26:25) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0

while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:26:35) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0

while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:27:34) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:27:51) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print("quantidade")
-- EXECUTION TIME:
0.506476
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 7, in <module>
    while (V1 != V2):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:30:36) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:31:11) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:31:24) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
11 print(max("quantidade"))
-- EXECUTION TIME:
0.183888
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 19
    11 print(max("quantidade"))
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:31:41) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:31:53) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print(max("quantidade"))
-- EXECUTION TIME:
0.326994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 7, in <module>
    while (V1 != V2):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:31:54) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:32:37) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = cont * cont
print(max("quantidade"))
-- EXECUTION TIME:
0.57989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 7, in <module>
    while (V1 != V2):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:32:53) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:33:12) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- EXECUTION TIME:
0.364535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 7, in <module>
    while (V1 != V2):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:34:31) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1 != V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:35:12) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (V1!=V2):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:37:34) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + v1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:38:05) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * v2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:38:27) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + v1
	cont = cont + v2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:38:53) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if (v1 > v2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:39:24) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if (V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:41:33) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if size(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:41:57) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if size(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- EXECUTION TIME:
0.592983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 8, in <module>
    i = i + V1[i] * V2[i]
IndexError: index 727 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:42:11) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
print(max("quantidade"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:45:48) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:46:10) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
-- EXECUTION TIME:
0.48142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 12, in <module>
    if(V1 > V2):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:46:24) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
if(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
-- ERROR:
File "XXXX", line 14
    elif(V1 < V2):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:46:34) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
if(V1 > V2):
		print("EUSAPIA")
elif(V1 < V2):
		print("BARSANULFO")
elif(V1 == v2):
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:48:08) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
if(V1 > V2):
		print("EUSAPIA")
elif(V1 < V2):
		print("BARSANULFO")
elif(V1 == v2):
		print("EMPATE")
quantidade = V1 * V2
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:48:59) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = V1 * V2
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:49:53) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if([V1] > [V2]):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = V1 * V2
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:51:08) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = V1 * V2
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:52:02) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = V1 * V2
print("quantidade")
-- EXECUTION TIME:
0.451951
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 12, in <module>
    if(V1 > V2):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:38:10) 
-- CODE:
from numpy import *
V1 = array(eval(input("informe vetores: ")))
V2 = array(eval(input("digite vetores: ")))
i = 0
cont = 0
cont = 0
while (i != size(V1) and i != size(V2)):
	i = i + V1[i] * V2[i]
	cont = cont + V1
	cont = cont + V2
	i = i + 1
	if(V1 > V2):
		print("EUSAPIA")
	elif(V1 < V2):
		print("BARSANULFO")
	elif(V1 == v2):
		print("EMPATE")
quantidade = V1 * V2
print("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
